<resources>
    <string name="app_name">Princess Test</string>

    <!-- Fragment titles -->
    <string name="title_fragment_title">Какая ты принцесса?</string>

    <!-- Fragment text -->
    <string name="title_text">Тест «Какая ты принцесса?»</string>


    <string name="princess01">\t Белоснежка покоряет всех своей безграничной добротой и неземной красотой. Милая и
        заботливая, принцесса всегда готова прийти на помощь — этими качествами и воспользовалась Злая Королева, мачеха
        Белоснежки, чтобы сжить со света свою падчерицу.
        \n \n \t Белоснежка, вынужденная покинуть родной замок и прятаться в лесу, не поддаётся отчаянию и старается
        сохранять оптимизм. Благодаря своей вере в лучшее, она встречает верных друзей — семерых гномов, и находит свою
        любовь.
    </string>
    <string name="princess02">\t Покахонтас — дочь индейского вождя. Она воплощает в себе главные черты своего племени:
        смелость, свободолюбие, любовь к земле и заботливое отношение ко всему живому. Она живёт в полной гармонии с
        природой, и ей нравится исследовать мир вокруг себя.
        \n \n \t Когда в места, обжитые её племенем, прибывают англичане, неравнодушная принцесса делает все, что в её
        силах, чтобы предотвратить войну. А ещё открывает новые, неведомые раньше чувства, на которые способно её
        сердце.
    </string>
    <string name="princess03">\t Имя Белль в переводе с французского означает «красивая», и все жители деревушки, где
        она живёт, готовы подтвердить, что эта юная особа — самая прекрасная девушка в мире. Однако красота не
        единственное, что отличает Белль. Больше всего на свете любознательная девушка любит книги, из которых она
        узнает о дальних странах и удивительных приключениях.
        \n \n \t Белль — смелая и решительная, она готова пожертвовать всем ради своих близких. Искренность и
        покладистый характер помогают ей видеть добро и красоту в каждом, даже в Чудовище….
    </string>
    <string name="princess04">\t Принцесса Жасмин мечтает о свободе и очень хочет увидеть весь мир, но заботливый
        папа-султан не позволяет ей выходить даже за стены дворца. Решительная принцесса сбегает на поиски своего
        счастья, а случайное знакомство с Аладдином открывает для неё дверь в мир приключений, о которых она раньше
        могла только мечтать.
        \n \n \t Открытая и смелая, Жасмин не боится отстаивать свои убеждения и бороться за собственное счастье. Щедрая
        принцесса заботится о благополучии жителей Аграбы, а ее мудрые советы помогают султану править страной.
    </string>
    <string name="princess05">\t Золушка — добрая и внимательная принцесса. Она заботится об окружающих и дружит с животными, которые всегда приходят к ней на помощь в трудную минуту.
        \n \n \t Трудолюбивая Золушка день напролёт занимается работой по дому, чтобы угодить своей мачехе и сводным сестрам, но она не позволяет печалям и невзгодам взять над ней верх. Отважная девушка искренне верит в чудеса и не боится следовать за своей мечтой, несмотря на трудности.
    </string>
    <string name="princess06">\t Ариэль — младшая из семи дочерей морского короля Тритона, очарованная миром людей.
        Любопытная Русалочка проводит свободное время, исследуя затонувшие корабли в поисках человеческих артефактов для
        своей тайной коллекции.
        \n \n \t У Ариэль очень независимый характер, поэтому она часто не слушается отца и уплывает из подводного
        дворца в одиночку или с лучшим другом Флаундером и крабом Себастьяном, которому Тритон приказал следить за своей
        беззаботной дочерью. Когда Ариэль влюбляется в принца Эрика, она проявляет настойчивость и жертвует самым
        дорогим, чтобы быть рядом с ним.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">Приложение создано с целью практики  изпользования Navigation library в приложении c множеством
        фрагментов.
    </string>
    <string name="princess01_name">Белоснежка</string>
    <string name="princess02_name">Покахонтас</string>
    <string name="princess03_name">Белль</string>
    <string name="princess04_name">Жасмин</string>
    <string name="princess05_name">Золушка</string>
    <string name="princess06_name">Ариэль</string>
    <string name="home_btn_title">На главную</string>
    <string name="share_btn_title">Поделиться</string>
    <string name="princess_btn">О принцессах</string>
    <string name="about_btn">О приложении</string>
    <string name="next_btn">Дальше</string>
    <string name="title_picture_content_description">Title picture</string>
    <string name="icon_picture_description">Icon picture</string>
</resources>
